--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -86,9 +86,34 @@ body {
 
 .main {
   display: flex;
-  justify-content: center;
   flex-direction: row;
   flex-grow: 1;
+}
+
+.issues-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
+  padding: 0rem 3rem;
+  border: 1px solid black;
+}
+
+.issue-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.7rem;
+  border-right: none;
+  overflow-y: scroll;
+}
+
+.issue-controller {
+  
+}
+
+.issue-card-container {
+  width: 100%;
 }
 
 .footer {
