--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,6 +70,14 @@ button:focus-visible {
 body {
   margin: 0;
   height: 100vh;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  background-image: url('../src/assets/sitematebackground.svg');
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: 100% auto;
+  
 }
 
 .wrapper {
@@ -82,6 +90,11 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding: 1rem 1rem;
+}
+
+.logo {
+  max-height: 75px;
 }
 
 .main {
@@ -95,8 +108,9 @@ body {
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
-  padding: 0rem 3rem;
+  padding: 0rem 0rem 3rem 3rem;
   border: 1px solid black;
+  
 }
 
 .issue-display {
@@ -112,6 +126,29 @@ body {
   
 }
 
+.fieldset-container {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5rem 0.75rem;
+  gap: 0.4rem;
+}
+
+.form-container {
+  padding: 0.5rem 0.5rem;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-text {
+  font-weight: 600;
+}
+
+.form-button {
+  margin: auto
+}
+
 .issue-card-container {
   width: 100%;
 }
@@ -120,4 +157,5 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  color: white;
 }
